# Arx_Bot

./: .gitignore  CODE_OF_CONDUCT.md  General_db.db  LICENSE.md  PIP_INSTALLS.md  README.md  REPLACEMENTS.md  SECRETS.md  SECURITY.md  afk.json  bot.py  expData.db  important.txt  keep_alive.py  mainbank.json  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  REPLACEMENTS.md  SECRETS.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
.github/❗dont_look_here❗/❗i_told_you_not_to_look_here❗/: NO.txt
.github/❗dont_look_here❗/❗i_told_you_not_to_look_here❗/❗bruh_stop_its_for_your_own_good❗/: DUDE-STOPPP.txt
.github/❗dont_look_here❗/❗i_told_you_not_to_look_here❗/❗bruh_stop_its_for_your_own_good❗/❗anywhere_further_is_at_your_own_risk❗/: I-GIVE-UP.txt
.github/❗dont_look_here❗/❗i_told_you_not_to_look_here❗/❗bruh_stop_its_for_your_own_good❗/❗anywhere_further_is_at_your_own_risk❗/❗its_too_late❗/:  ImSorry.txt  bobux
bot_config/: secrets.json
cogs/: _sub-commands.py  admin.py  afk.py  api.py  channels.py  config.py  currency.py  econonmy.py  emojiinfo.py  ep27.py  error.py  events.py  giveaway.py  help.py  image.py  info.py  invites.py  levelling.py  logs.py  math.py  misc.py  moderation.py  usage.py  warns.py
cogs/bot_config/: secrets.json
cogs/utils/: formats.py  util.py
static/: index.css  styles.css
templates/: dashboard.html  home.html  main.js
